<resources>
    <string name="app_name">MusicWiki</string>
    <string name="welcome">Welcome!</string>
    <string name="choose_genre">Choose a genre to start with</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="tracks">Tracks</string>
    <string name="play_count">Play Count</string>
    <string name="followers">Followers</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="top_albums">Top Albums</string>
</resources>